--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-image: url("./assets/bg.jpg");
+  background-image: url("assets/bg.jpg");
   background-size: cover;
 }
 
