--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,18 @@ button {
   text-transform: uppercase;
 }
 
+.container > button {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin: 10px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  padding: 0
+}
+
 button:hover {
   color: #000000;
 }
