--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,55 @@
 html,
 body {
-  color: white;
+  color: #f1f1f1;
 }
 
 .container {
-  margin: 20px;
+  margin: 0 auto;
+  padding: 0 40px;
 }
 
 .intro {
-  padding-top: 30px;
+  padding: 30px 0;
 }
 
-h1 {
-  font-size: 50px;
-  letter-spacing: -4px;
+.intro h1 {
+  font-size: 3.1rem;
+  letter-spacing: -0.06em;
   font-weight: 400;
   line-height: 1;
 }
 
+.intro h3 {
+  font-size: 1.25rem;
+  font-weight: 200;
+}
+
 h2 {
-  font-size: 20px;
-  font-weight: lighter;
+  font-size: 2.2rem;
+  font-weight: 400;
+  /* margin-bottom: 1em;
+  font-weight: 400; */
+}
+
+h2::after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 68px;
+  background: #9d1212;
+  margin: 9px 0;
+}
+
+h3 {
+  font-size: 1.7rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.8;
+  color: #aeadad;
 }
 
 .about {
@@ -51,40 +80,49 @@ h2 {
 }
 .about,
 .work {
-  border-top: 1px solid rgba(255, 255, 255, 0.258)
-}
-
-.work h3 {
-  font-size: 22px;
-  font-weight: 400;
-}
-
-.work p {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.8;
-  color: rgb(174, 173, 173);
+  border-top: 1px solid #ffffff42;
+  padding-top: 50px;
 }
 
 .work ul {
   padding-left: 15px;
   line-height: 28px;
+  color: #c7c7c7;
 }
 
 .card__box {
   display: flex;
   align-items: initial;
   flex-direction: column-reverse;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 100px;
 }
 
 .card__text button {
   background: #df0d0d;
-  margin-top: 10px;
+}
+
+.card__links {
+  display: flex;
+  align-items: end;
+  margin-top: 30px;
+  gap: 20px;
+}
+
+.card__git {
+  width: 35px;
+  height: 35px;
+  color: #f1f1f1;
+  cursor: pointer;
+}
+
+.card__git:hover {
+  transform: scale(1.2);
+  transition: all 0.3s;
 }
 
 .card__box img {
-  max-width: 500px;
+  width: 100%;
   height: 300px;
   object-fit: cover;
 }
@@ -104,35 +142,28 @@ iframe {
   height: 100vh;
 }
 
-@media(min-width: 500px) {
+@media (min-width: 500px) {
   .container {
     max-width: 900px;
-    border: 1px solid red;
-    margin: 0 auto;
-    padding: 0 20px;
-    
   }
-  .card__box {
-    flex-direction: unset;
-    justify-content: center;
-    margin: 0 30px 100px 30px;
-    border: 1px solid red;
-    gap: 2rem;
 
+  .intro h3 {
+    text-align: center;
   }
-  .card__text p {
-    border: 1px solid red;
-  }
+
   .card__box img {
-    border: 1px solid red;
-    max-width: 400px;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
   }
-
 }
 
-@media(min-width: 800px) {
-
-
+@media (min-width: 800px) {
+  .card__box {
+    flex-direction: unset;
+    gap: 2rem;
+  }
+  .intro h3 {
+    direction: rtl;
+    margin-right: 250px;
+  }
 }
