--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
   background-attachment: fixed;
 }
 
-
 canvas {
   width: 100%;
   height: 100vh;
@@ -69,7 +68,7 @@ button {
   width: 50px;
   height: 50px;
   text-align: center;
-  padding: 0
+  padding: 0;
 }
 
 button:hover {
@@ -78,8 +77,7 @@ button:hover {
 
 button:hover {
   color: black;
-  background: rgb(186, 186, 186);
-
+  background: #bababa;
 }
 .nav button:nth-child(1) {
   background: #df0d0d;
