--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  
+}
+
+#root {
+  background: #0000009e;
+  box-shadow: 0px -100px 180px 0 #000000b5;
+  
 }
 
 body {
@@ -16,6 +23,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  
 }
 
 canvas {
