--- a/src/App.css
+++ b/src/App.css
@@ -53,12 +53,30 @@ p {
   color: #aeadad;
 }
 
-.about {
+/* .about {
   height: 100vh;
+} */
+
+.flex__about {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+}
+.me__img {
+  max-width: 300px;
 }
 
 .about button {
   margin-top: 20px;
+}
+
+.resume__btn {
+  text-decoration: none;
+  color: red;
+
 }
 .flex__container {
   display: flex;
