--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,18 @@ body {
   padding: 0 40px;
 }
 
-.intro {
-  padding: 30px 0;
+.home {
+  padding: 100px 0;
 }
 
-.intro h1 {
+.home h1 {
   font-size: 3.1rem;
   letter-spacing: -0.06em;
   font-weight: 400;
   line-height: 1;
 }
 
-.intro h3 {
+.home h3 {
   font-size: 1.25rem;
   font-weight: 200;
 }
@@ -53,8 +53,6 @@ p {
 .flex__about {
   display: flex;
   flex-direction: column;
-  /* width: 100%; */
-  /* margin: 0 auto; */
   align-items: center;
   justify-content: center;
   gap: 50px;
@@ -86,7 +84,7 @@ p {
   margin-top: 100px;
 }
 
-.intro > button {
+.home > button {
   margin: 50px 0;
   color: red;
 }
@@ -142,7 +140,7 @@ p {
 
 .card__box img {
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -170,7 +168,7 @@ iframe {
     max-width: 900px;
   }
 
-  .intro h3 {
+  .home h3 {
     text-align: center;
   }
 
@@ -185,9 +183,12 @@ iframe {
     flex-direction: unset;
     gap: 2rem;
   }
-  .intro h3 {
+  .home h3 {
     direction: rtl;
     margin-right: 250px;
+  }
+  .flex__container {
+    margin: 150px 0;
   }
   .flex__about {
     flex-direction: unset;
@@ -195,5 +196,8 @@ iframe {
   .about__btn {
     flex-direction: unset;
     justify-content: center;
+  }
+  .card__box img {
+    max-width: 65%;
   }
 }
