--- a/src/App.css
+++ b/src/App.css
@@ -145,8 +145,8 @@ p {
 }
 
 .card__box img {
-  width: 100%;
-  height: 300px;
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
@@ -177,12 +177,6 @@ iframe {
   .home h3 {
     text-align: center;
   }
-
-  .card__box img {
-    height: 400px;
-    object-fit: cover;
-  }
-}
 
 @media (min-width: 800px) {
   .card__box {
