--- a/src/index.css
+++ b/src/index.css
@@ -288,7 +288,10 @@ p {
 .card__box img {
   max-width: 100%;
   height: auto;
-  object-fit: cover;
+  display: block; 
+  object-fit: cover; 
+  border-radius: 8px; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 span {
@@ -322,7 +325,8 @@ iframe {
 
 @media (min-width: 800px) {
   .card__box {
-    flex-direction: unset;
+    /* flex-direction: unset; */
+    /* max-width: 65%; */
     gap: 2rem;
   }
   .home h3 {
@@ -339,9 +343,6 @@ iframe {
     flex-direction: unset;
     justify-content: center;
   }
-  .card__box img {
-    max-width: 65%;
-  }
   .nav {
     flex-direction: row;
     bottom: 3vh; 
@@ -349,3 +350,4 @@ iframe {
     bottom: 3vh;
   }
 }
+
